# integrations

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  simvue.ini
.github/: .env  pull-request-template.md
.github/ISSUE_TEMPLATE/: new-connector-request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix-template.md  miscellaneous-template.md  new-connector-template.md  new-feature-template.md  new-nonpython-connector-template.md  new-python-connector-template.md  new-tests-template.md
.github/workflows/: test_integration.yml  test_macos.yml  test_ubuntu.yml  test_windows.yml
examples/fds/: activate_vents.fds  fds_example.py  minimal_fds.py
examples/moose/: coffee_cup.py  moose_example.py  thermal_bar.i  wrapper.py
examples/openfoam/: hotroom.py  openfoam_example.py
examples/su2/: inviscid_oneram6.py
examples/tensorflow/: basic_integration.py  customised_integration.py  detailed_integration.py  test.py
examples/wrappers/: moose.py  openfoam.py
simvue_integrations/: __init__.py
simvue_integrations/connectors/: __init__.py  fds.py  generic.py  moose.py  openfoam.py  su2.py  tensorflow.py
simvue_integrations/extras/: __init__.py  create_command.py  validators.py
simvue_integrations/moose/: wrapper.py
simvue_integrations/plugins/: __init__.py  tensorflow.py
simvue_integrations/tensorflow/: tensorvue.py
simvue_integrations/wrappers/: fds.py  generic.py  moose.py  openfoam.py
tests/: conftest.py
tests/integration/: test_fds.py  test_moose.py  test_openfoam.py  test_tensorflow.py
tests/unit/: test_fds_csv_parser.py  test_fds_file_upload.py  test_fds_header_parser.py  test_fds_log_parser.py  test_moose_file_upload.py  test_moose_header_parser.py  test_moose_log_parser.py  test_moose_scalarpostprocessor_parser.py  test_moose_vectorpostprocessor_parser.py  test_openfoam_file_upload.py  test_openfoam_log_parser.py  test_tensorflow_evaluate.py  (+1 more)
(+57 files in other folders)
