[tool.poetry]
name = "simvue-integrations"
version = "0.1.0"
description = ""
authors = ["Matthew Field <matthew.field@ukaea.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
simvue = "^1.0.1"
ukaea-multiparser = "^1.0.1"
tensorflow = {version="^2.16.1", optional=true}
mnist = {version="^0.2.2", optional=true}

[tool.poetry.extras]
tensorflow = ["tensorflow", "mnist"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
