[tool.poetry]
name = "simvue-integrations"
version = "0.1.0"
description = ""
authors = ["Matthew Field <matthew.field@ukaea.uk>"]
readme = "README.md"
include = ["extras/fds_unlim"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
simvue = { git = "https://github.com/simvue-io/python-api.git", branch = "dev" }
ukaea-multiparser = "^1.0.2"
tensorflow = {version="^2.16.1", optional=true}
mnist = {version="^0.2.2", optional=true}
f90nml = {version = "^1.4.3", optional = true}

[tool.poetry.extras]
tensorflow = ["tensorflow", "mnist"]
fds = ["f90nml"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
